[package]
name = "Encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
base64 = "0.13.1"
hex = "0.4.3"
num-bigint = "0.4.3"
pwn-helper = "0.1.0"
serde = "1.0.147"
serde_json = "1.0.87"
